k8s/prd/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-prd-ratings
  namespace: student22-bookinfo-prd
  labels:
    app: bookinfo-prd-ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-prd-ratings
  template:
    metadata:
      labels:
        app: bookinfo-prd-ratings
    spec:
      containers:
      - name: bookinfo-prd-ratings
        image: ghcr.io/thiruttikorn/bookinfo-ratings:prd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
      imagePullSecrets:
      - name: registry-bookinfo
